HighContrast: Fix checkboxes in selected context
Set a proper color so checks and radios don't disappear on the
black selection background.

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -1640,7 +1640,7 @@ GtkCheckButton.text-button, GtkRadioButton.text-button {
     color: $fg_color;
     background-image: none;
     -gtk-icon-source: -gtk-icontheme('#{$a}-symbolic');
-    &:hover { color: mix($fg_color, $bg_color, 80%) }
+    &:hover { color: $bg_color; }
     &:checked, &:active {
       -gtk-icon-source: -gtk-icontheme('#{$a}-checked-symbolic');
       &:disabled {
